examples/tests/compute/invalid/int/main.cue
package testing

#dagger: {
	compute: 123
}
